# livekit-llm-pipeline-with-vision

./: docker-compose-db.yml
agent-starter-python/: .gitignore  pyproject.toml
agent-starter-python/nbs/: llama_index_test.ipynb  prompt.txt
agent-starter-python/src/: agent.py  customImage.py  example.py  vision_agent.py  vision_agent_fixed.py  vision_agent_realtime.py  vllmint.py
agent-starter-python/src/utils/: bedrock_processor.py  gemma_processor.py  gemma_processor_ollama.py  langgraph_processor.py  lg_react_agent_processor.py  mistral_processor.py  ollama_processor.py  openai_processor.py  tools.py
agent-starter-python/tests/: test_debug_function.py  test_detailed_logging.py  test_function_calling.py  test_lifecycle_documentation.py  test_mistral_system.py  test_openai_documentation.py  test_parsing.py  test_raw_function_call.py  test_simple_function.py  test_simplified_openai.py  test_streaming.py  test_vision_agent_instructions.py
agent-starter-react/: app-config.ts  middleware.ts  package-lock.json  package.json  pnpm-lock.yaml
agent-starter-react/app/: globals.css  layout.tsx
agent-starter-react/components/: app.tsx  debug-panel.tsx  project-selector.tsx  session-view.tsx  user-profile.tsx  welcome.tsx
agent-starter-react/hooks/: useProjects.ts
browser-plugin/: FINAL_GUIDE.md  README.md  package.json  pnpm-lock.yaml  test.html
management/: .gitignore  OLLAMA_EMBEDDINGS_MIGRATION.md  VIDEO_PLAYER_README.md  VIDEO_SYSTEM_README.md  check-sessions.js  monitor-sessions.js  package-lock.json  package.json  test-audio-chunking.js  test-db.js
(+110 files in other folders)
